--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,15 @@
-<h1>Mic Drop!!</h1>
-<img src ='gopher_micdrop.png' style="width:250px;height:300px;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NodeExpress</title>
+</head>
+<body>
+    <h1>Mic Drop!!</h1>
+    <img src ='/images/gopher_micdrop.png' style="width:250px;height:300px;">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, deleniti, aliquam dicta vero sed nulla omnis est sunt non accusantium tenetur illo ad saepe aliquid minus voluptatibus magni tempora quae.</Lorem></p>
+</body>
+</html>
